# NetWatch

./: Cargo.toml  README.md  index.html  package-lock.json  package.json  packets2.json  packets3.json  tailwind.config.js
src/: errors.rs  main.rs
src-tauri/: Cargo.toml  packets.json  packets2.json  packets3.json  tauri.conf.json
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/api/: ai.rs  import_export.rs  mod.rs  packets.rs
src-tauri/src/logic/: import_export.rs  mod.rs  show_packets.rs
src/ui/: app.rs
src/ui/components/: mod.rs  sidenavbar.rs  theme.rs
styles/: output.css
