[package]
name = "netwatch"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "netwatch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
env_logger = "0.11.3"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "=1.0.108"
pnet="0.35.0"
chrono="0.4.39"
log="0.4.0"
tauri-plugin-dialog = "2"
thiserror="2.0.12"
anyhow = "1.0.97"
linfa = "0.7.0"
linfa-clustering = "0.7.0"
linfa-nn = "0.7.0"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
plotters = "0.3.5"
polars = { version = "0.35.4", features = ["ndarray"] }
rand_xoshiro = "0.6.0"


